Fix css error, add padding and text wrap to error

--- a/Bootstrap/src/main/resources/co/phoenixlab/dn/dngearsim/bootstrap/less/error.less
+++ b/Bootstrap/src/main/resources/co/phoenixlab/dn/dngearsim/bootstrap/less/error.less
@@ -21,7 +21,7 @@
 .error {
   -fx-background-color: @color-window-background;
   -fx-background-image: url("../img/splash.png");
-  -fx-background-position: top-left;
+  -fx-background-position: top left;
   -fx-background-repeat: no-repeat;
   -fx-background-size: auto;
   -fx-min-width: @size-window-width;
@@ -41,6 +41,8 @@
     -fx-font: @font-content;
     -fx-text-alignment: center;
     -fx-alignment: center;
+    -fx-padding: 0 10px 0 10px;
+    -fx-wrap-text: true;
   }
 
   .button {
